@@ -3,7 +3,8 @@ lib_LIBRARIES = libgslieeeutils.a
 include_HEADERS = gsl_ieee_utils.h
 
 libgslieeeutils_a_SOURCES = endian.c print-ieee.c standardize.c \
-	make_rep.c gsl_ieee_utils.h ieee_utils.h
+	make_rep.c gsl_ieee_utils.h ieee_utils.h \
+	fp-mode-string.c fp-mode.c 
 
 INCLUDES = -I$(srcdir)/.. -I$(srcdir)/../err
 
