@@ -1,3 +1,8 @@
+Mon Jun  1 15:27:08 1998  Brian Gough  <bjg@vvv.lanl.gov>
+
+	* added support for setting the IEEE mode from the environment
+	variable GSL_IEEE_MODE (only works for the Linux kernel so far)
+
 Mon May 18 16:20:17 1998  Brian Gough  <bjg@vvv.lanl.gov>
 
 	* The determination of endianness is now done on each call instead
